--- a/about/advisory-commeti.html
+++ b/about/advisory-commeti.html
@@ -134,14 +134,35 @@
                 <div class="page-title-heading">
                       <h2 class="text-ceter">Advisory Committee</h2>  
                 </div>
-                <diiv class="row">
+                <div class="row">
+                <div class="gallery_product col-lg-6 col-md-6 col-sm-6 col-xs-12 filter irrigation">
+                    <img src="about-images/our-teams/H R Gupta Former Secretary, CBSE.png" height="200px" width="200px" class="img-responsive center-block port-image">
+                    <div class="caption text-center">
+                        <span class="text-bold">Mr H R Gupta</span><br>
+                        <span class="text-bold"> (Former Secretary,CBSE)</span>
+                    </div>
+                </div>
+                <div class="gallery_product col-lg-6 col-md-6 col-sm-6 col-xs-12 filter irrigation">
+                    <img src="about-images/our-teams/MS. Neha Sharma (Former Secretary, CBSE).png" height="200px" width="200px" class="img-responsive center-block port-image">
+                    <div class="caption text-center">
+                        <span class="text-bold">Ms Neha Sharma</span><br>
+                        <span class="text-bold"> (Former Dy Secretary,CBSE)</span>
+                    </div>
+                </div>
                 <div class="gallery_product col-lg-6 col-md-6 col-sm-6 col-xs-12 filter hdpe">
                     <img src="about-images/our-teams/Puran Chand General Secretary, COBSE.png" height="200px" width="200px" class="img-responsive center-block port-image">
                     <div class="caption text-center">
-                        <span class="text-bold">PURAN CHAND</span><br>
+                        <span class="text-bold">Mr PURAN CHAND</span><br>
                         <span class="text-bold"> (General Secretary,Council of Boards of School Education in India (COBSE))</span>
                     </div>
                 </div>
+                <div class="gallery_product col-lg-6 col-md-6 col-sm-6 col-xs-12 filter hdpe">
+                        <img src="about-images/our-teams/Prof. Dinesh Kumar Head Publication, NCERT.png" height="200px" width="200px" class="img-responsive center-block port-image">
+                        <div class="caption text-center">
+                            <span class="text-bold">Prof Dinesh Kumar</span><br>
+                            <span class="text-bold">(Head of Dept,Science & Mathematics)</span>
+                        </div>
+                    </div>
                 <div class="gallery_product col-lg-6 col-md-6 col-sm-6 col-xs-12 filter sprinkle">
                     <img src="about-images/our-teams/Ravi Prakash Gupta Retired as Professor _ Regional.png" height="200px" width="200px" class="img-responsive center-block port-image">
                     <div class="caption text-center">
@@ -151,13 +172,13 @@
                             Delhi Centre)</span>
                     </div>
                 </div>
-                <div class="gallery_product col-lg-6 col-md-6 col-sm-6 col-xs-12 filter hdpe">
-                    <img src="about-images/our-teams/Prof. Dinesh Kumar Head Publication, NCERT.png" height="200px" width="200px" class="img-responsive center-block port-image">
-                    <div class="caption text-center">
-                        <span class="text-bold">Prof Dinesh Kumar</span><br>
-                        <span class="text-bold">(Head of Dept,Science & Mathematics)</span>
+                <div class="gallery_product col-lg-6 col-md-6 col-sm-6 col-xs-12 filter spray">
+                        <img src="about-images/our-teams/Kala Anjan Dutta Director, American Library.png" height="200px" width="200px" class="img-responsive center-block port-image">
+                        <div class="caption text-center">
+                            <span class="text-bold">Ms Kala Anjan Dutta</span><br>
+                            <span class="text-bold"> (Former Director,The American Library)</span>
+                        </div>
                     </div>
-                </div>
                 <div class="gallery_product col-lg-6 col-md-6 col-sm-6 col-xs-12 filter irrigation">
                     <img src="about-images/our-teams/Mr Baldev Raj Dawar Science Communicator.png" height="200px" width="200px" class="img-responsive center-block port-image">
                     <div class="caption text-center">
@@ -165,13 +186,7 @@
                         <span class="text-bold"> (Science Communicator)</span>
                     </div>
                 </div>
-                <div class="gallery_product col-lg-6 col-md-6 col-sm-6 col-xs-12 filter spray">
-                    <img src="about-images/our-teams/Kala Anjan Dutta Director, American Library.png" height="200px" width="200px" class="img-responsive center-block port-image">
-                    <div class="caption text-center">
-                        <span class="text-bold">Ms Kala Anjan Dutta</span><br>
-                        <span class="text-bold"> (Former Director,The American Library)</span>
-                    </div>
-                </div>
+               
                 <div class="gallery_product col-lg-6 col-md-6 col-sm-6 col-xs-12 filter irrigation">
                     <img src="about-images/our-teams/Dr N Madhuri Parthi Educationist _ Consultant.png" height="200px" width="200px" class="img-responsive center-block port-image">
                     <div class="caption text-center">
@@ -180,13 +195,7 @@
                             Various Schools)</span>
                     </div>
                 </div>
-                <div class="gallery_product col-lg-6 col-md-6 col-sm-6 col-xs-12 filter irrigation">
-                    <img src="about-images/our-teams/H R Gupta Former Secretary, CBSE.png" height="200px" width="200px" class="img-responsive center-block port-image">
-                    <div class="caption text-center">
-                        <span class="text-bold">Mr H R Gupta</span><br>
-                        <span class="text-bold"> (Former Secretary,CBSE)</span>
-                    </div>
-                </div>
+                
         </div>
             </div>
         </div>
