--- a/about/advisory-commeti.html
+++ b/about/advisory-commeti.html
@@ -52,7 +52,7 @@
         <!-- Header -->
         <header id="header" class="header">
             <div class="header-wrap">
-                <div class="container-fluid">
+                <div class="container">
                     <div class="header-wrap clearfix">
                         <div id="logo" class="logo">
                             <a href="../index.html" rel="home">
@@ -116,13 +116,7 @@
                                         <li>
                                             <a href="../contact/contact-us.html">Contact Us</a>
                                         </li>   
-                                        <li>
-                                                <a class="nav-link btn btn-white btn-white-outline mbr-editable-menu-item" 
-                                                href="../assets/nbse_android.apk" target="_blank">
-                                                <span style="padding: 5px;">
-                                                <img src="../assets/android.png" style="height: 20px;width: 20px;"/></span>
-                                                GET ON PLAY STORE</a>
-                                        </li>                                   
+                                                                           
                                     </ul>
                                 </nav>
                             </div>
@@ -222,7 +216,7 @@
                 <div class="section-inner">
                     <div class="container">
                         <div class="row normal-sidebar">
-                          <div class="col-md-6  widget widget-nav-menu">
+                          <div class="col-md-3  widget widget-nav-menu">
                                 <div class=" widget-inner">
                                     <h2 class="widget-title maincolor1">
                                         <!-- <img src="../assets/NBSE LOGO 2.png" /> -->
@@ -249,6 +243,11 @@
                                         </ul>
                                     </div>
                                 </div>
+                            </div>
+                            <div class="col-md-3">
+                                <a href="../assets/nbse_android.apk" target="_blank">
+                                    <img src="../assets/gogle_play_store.png" alt="">
+                                </a>
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                 <div class="footer_contain">
