--- a/about/advisory-commeti.html
+++ b/about/advisory-commeti.html
@@ -90,11 +90,11 @@
                                             <a href="#">EXAM SCHEDULE</a>
                                             <ul class="submenu">
                                                 <li><a href="../exam-shedule/exam-shedule.html">Schedule</a></li>
-                                                <li><a href="../assets/nbse-images/Admit Card (NBSE) (1).pdf">NBSE Admit Card </a></li>
-                                                <li><a href="../assets/nbse-images/Marksheet (NBSE).pdf">NBSE Marksheet</a></li>
+                                                <li><a href="../assets/nbse-images/Admit Card (NBSE) (1).pdf"target="_blank">NBSE Admit Card </a></li>
+                                                <li><a href="../assets/nbse-images/Marksheet (NBSE).pdf" target="_blank">NBSE Marksheet</a></li>
                                                 <li><a href="../exam-shedule/marking-scheme.html">Marking Scheme</a></li>
-                                                <li><a href="../exam-shedule/nbse-sample-paper.html">NBSE Sample Paper</a></li>
-                                                <li><a href="/">CBSE Sample Papers 2019</a></li>
+                                                <li><a href="javascript:void(0)">NBSE Sample Paper</a></li>
+                                                <li><a href="../exam-shedule/cbse-sample-paper.html">CBSE Sample Papers 2019</a></li>
                                             </ul>
                                         </li>                                
                                         <li>
@@ -131,7 +131,7 @@
         </div>      
 
  <!-- ========================= Main Body ================================== -->       
-<div class="container">
+<div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
                 <div class="page-title-heading">
@@ -142,28 +142,29 @@
                     <img src="about-images/our-teams/H R Gupta Former Secretary, CBSE.png" height="200px" width="200px" class="img-responsive center-block port-image">
                     <div class="caption text-center">
                         <span class="text-bold">Mr H R Gupta</span><br>
-                        <span class="text-bold"> (Former Secretary,CBSE)</span>
+                        <span class="text-bold"> (Former Secretary, CBSE)</span>
+                       
                     </div>
                 </div>
                 <div class="gallery_product col-lg-6 col-md-6 col-sm-6 col-xs-12 filter irrigation">
                     <img src="about-images/our-teams/MS. Neha Sharma (Former Secretary, CBSE).png" height="200px" width="200px" class="img-responsive center-block port-image">
                     <div class="caption text-center">
                         <span class="text-bold">Ms Neha Sharma</span><br>
-                        <span class="text-bold"> (Former Dy Secretary,CBSE)</span>
+                        <span class="text-bold"> (Former Dy Secretary, CBSE)</span>
                     </div>
                 </div>
                 <div class="gallery_product col-lg-6 col-md-6 col-sm-6 col-xs-12 filter hdpe">
                     <img src="about-images/our-teams/Puran Chand General Secretary, COBSE.png" height="200px" width="200px" class="img-responsive center-block port-image">
                     <div class="caption text-center">
                         <span class="text-bold">Mr PURAN CHAND</span><br>
-                        <span class="text-bold"> (General Secretary,Council of Boards of School Education in India (COBSE))</span>
+                        <span class="text-bold"> (Former General Secretary, Council of Boards of School Education in India (COBSE))</span>
                     </div>
                 </div>
                 <div class="gallery_product col-lg-6 col-md-6 col-sm-6 col-xs-12 filter hdpe">
                         <img src="about-images/our-teams/Prof. Dinesh Kumar Head Publication, NCERT.png" height="200px" width="200px" class="img-responsive center-block port-image">
                         <div class="caption text-center">
                             <span class="text-bold">Prof Dinesh Kumar</span><br>
-                            <span class="text-bold">(Head of Dept,Science & Mathematics)</span>
+                            <span class="text-bold">(Head of Dept, Science & Mathematics)</span>
                         </div>
                     </div>
                 <div class="gallery_product col-lg-6 col-md-6 col-sm-6 col-xs-12 filter sprinkle">
@@ -171,15 +172,15 @@
                     <div class="caption text-center">
                         <span class="text-bold">Dr. Ravi Prakash Gupta</span><br>
                         <span class="text-bold"> (Retired as Professor & Regional
-                            Director, Central Institute of Hindi (Ministry of HRD, Govt. of India)
-                            Delhi Centre)</span>
+                            Director, Central Institute of Hindi </span>
+                            <!-- (Ministry of HRD, Govt. of India) -->
                     </div>
                 </div>
                 <div class="gallery_product col-lg-6 col-md-6 col-sm-6 col-xs-12 filter spray">
                         <img src="about-images/our-teams/Kala Anjan Dutta Director, American Library.png" height="200px" width="200px" class="img-responsive center-block port-image">
                         <div class="caption text-center">
                             <span class="text-bold">Ms Kala Anjan Dutta</span><br>
-                            <span class="text-bold"> (Former Director,The American Library)</span>
+                            <span class="text-bold"> (Former Director, The American Library)</span>
                         </div>
                     </div>
                 <div class="gallery_product col-lg-6 col-md-6 col-sm-6 col-xs-12 filter irrigation">
