--- a/about/advisory-commeti.html
+++ b/about/advisory-commeti.html
@@ -172,7 +172,7 @@
                     <div class="caption text-center">
                         <span class="text-bold">Dr. Ravi Prakash Gupta</span><br>
                         <span class="text-bold"> (Retired as Professor & Regional
-                            Director, Central Institute of Hindi </span>
+                            Director, Central Institute of Hindi)</span>
                             <!-- (Ministry of HRD, Govt. of India) -->
                     </div>
                 </div>
